Replay docs added
