# src/routes/replay.route.ts
@@ -22,8 +22,6 @@ let router = express.Router();
  *    responses:
  *      200:
  *        $ref: '#/components/responses/CreateReplaySuccess'
- *      404:
- *        $ref: '#/components/responses/CreateReplayFail'
  *      400:
  *        $ref: '#/components/responses/Invalid'
  *      500:
@@ -32,6 +30,33 @@ let router = express.Router();
  *      - ApiKeyAuth: []
  */
 router.post("/create", validator(createReplaySchema), createReplayHandler);
+
+/**
+ * @openapi
+ * '/replay/get':
+ *  get:
+ *    tags:
+ *    - Replay
+ *    summary: Get a replay
+ *    operationId: getReplay
+ *    requestBody:
+ *      required: true
+ *      content:
+ *        application/json:
+ *          schema:
+ *            $ref: '#/components/schemas/GetReplayInput'
+ *    responses:
+ *      200:
+ *        $ref: '#/components/responses/GetReplaySuccess'
+ *      404:
+ *        $ref: '#/components/responses/GetReplayFail'
+ *      400:
+ *        $ref: '#/components/responses/Invalid'
+ *      500:
+ *        $ref: '#/components/responses/Error'
+ *    security:
+ *      - ApiKeyAuth: []
+ */
 router.get("/get", validator(getReplaySchema), cacheMiddleware("_id"), getReplayHandler);
 
 export default router;
